--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
         "pheromone/phpcs-security-audit": "^2.0",
         "php-webdriver/webdriver": "^1.15",
         "squizlabs/php_codesniffer": "^3.7",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "phpstan/phpstan": "^1.10.62",
         "slevomat/coding-standard": "^8.8",
         "spaze/phpstan-disallowed-calls": "^2.12",
-        "psr/container": "1.1.2"
+        "psr/container": "1.1.2",
+        "phpstan/phpstan-deprecation-rules": "^1.1"
     },
     "config": {
         "allow-plugins": {
