--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,18 @@
 {
+    "name": "digitalist-open-cloud/matomo-bot-tracker",
+    "description": "Bot Tracker for Matomo",
+    "type": "matomo-plugin",
+    "license": "LGPL-3.0-or-later",
+    "version": "5.2.3",
+    "authors": [
+        {
+            "name": "Mikke Schirén",
+            "email": "mikke.schiren@digitalist.com"
+        }
+    ],
+    "require": {
+        "php": ">=8.1.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "9.6.4",
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
