--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=8.1.0"
+        "php": ">=8.1.0",
+        "composer/installers": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.6.4",
@@ -27,7 +28,8 @@
     },
     "config": {
         "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "composer/installers": true
         }
     }
 }
