--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Bot Tracker for Matomo",
     "type": "matomo-plugin",
     "license": "LGPL-3.0-or-later",
-    "version": "5.2.5",
+    "version": "5.2.6",
     "authors": [
         {
             "name": "Mikke Schirén",
@@ -30,6 +30,11 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "composer/installers": true
+        }
+    },
+    "extra": {
+        "installer-paths": {
+            "plugins/BotTracker/": ["matomo-plugin"]
         }
     }
 }
