--- a/.github/workflows/phpcs.yaml
+++ b/.github/workflows/phpcs.yaml
@@ -32,5 +32,4 @@ jobs:
           php-version: '8.1'
           tools: cs2pr
       - name: Run phpcs
-        run: ./vendor/bin/phpcs .  --standard=PSR12 -q --report=checkstyle --ignore=*/vendor/*,Updates/*,tests/* | cs2pr
-
+        run: ./vendor/bin/phpcs . --standard=tests/ruleset.xml -q --report=checkstyle --ignore=*/vendor/*,Updates/*,tests/* | cs2pr
